# github-big-proj20

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_EN.md  pyproject.toml  pytest.ini
.pytest_cache/v/cache/: lastfailed  nodeids
docs/: ARCHITECTURE.md
examples/: demo_cost_sync.py  demo_orchestration.py  demo_quality.py
skills_builtin/api-builder/: SKILL.md  skill.json
skills_builtin/blog-writer/: SKILL.md  skill.json
skills_builtin/code-review/: SKILL.md  skill.json
skills_builtin/data-analyzer/: SKILL.md  skill.json
skills_builtin/doc-translator/: SKILL.md  skill.json
skills_builtin/rag-assistant/: SKILL.md  skill.json
skills_builtin/shell-master/: SKILL.md  skill.json
src/: __init__.py  cli.py
src/agents/: registry.py
src/content_sync/: sync_engine.py
src/core/: config.py  gateway.py
src/cost_optimizer/: smart_router.py
src/data_layer/: unified_data.py
src/orchestrator/: router.py
src/quality_engine/: anti_homogenizer.py
src/skills/: manager.py
tests/: test_cost.py  test_data_layer.py  test_quality.py  test_registry.py  test_skills.py
